compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__unicode1.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn emoji() -> String {\n  \"\\u{1f600}\"\n}\n"
---
----- SOURCE CODE

pub fn emoji() -> String {
  "\u{1f600}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([emoji/0]).

-spec emoji() -> binary().
emoji() ->
    ~"\x{1f600}".
