compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__unicode2.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn y_with_dieresis() -> String {\n  \"\\u{0308}y\"\n}\n"
---
----- SOURCE CODE

pub fn y_with_dieresis() -> String {
  "\u{0308}y"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([y_with_dieresis/0]).

-spec y_with_dieresis() -> binary().
y_with_dieresis() ->
    ~"\x{0308}y".
