compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__unicode_concat1.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn main(x) -> String {\n  x <> \"\\u{0308}\"\n}\n"
---
----- SOURCE CODE

pub fn main(x) -> String {
  x <> "\u{0308}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main(binary()) -> binary().
main(X) ->
    <<X/binary, "\x{0308}"/utf8>>.
