compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__unicode_escape_sequence_6_digits.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn unicode_escape_sequence_6_digits() -> String {\n  \"\\u{10abcd}\"\n}\n"
---
----- SOURCE CODE

pub fn unicode_escape_sequence_6_digits() -> String {
  "\u{10abcd}"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([unicode_escape_sequence_6_digits/0]).

-spec unicode_escape_sequence_6_digits() -> binary().
unicode_escape_sequence_6_digits() ->
    ~"\x{10abcd}".
